--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "PerxAngularInterview1": {
+    "perxangularinterview": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/PerxAngularInterview1",
+            "outputPath": "dist/perxangularinterview",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -67,18 +68,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "PerxAngularInterview1:build"
+            "browserTarget": "perxangularinterview:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "PerxAngularInterview1:build:production"
+              "browserTarget": "perxangularinterview:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "PerxAngularInterview1:build"
+            "browserTarget": "perxangularinterview:build"
           }
         },
         "test": {
@@ -93,6 +94,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -115,15 +117,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "PerxAngularInterview1:serve"
+            "devServerTarget": "perxangularinterview:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "PerxAngularInterview1:serve:production"
+              "devServerTarget": "perxangularinterview:serve:production"
             }
           }
         }
       }
-    }},
-  "defaultProject": "PerxAngularInterview1"
+    }
+  },
+  "defaultProject": "perxangularinterview"
 }
