--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "perx-angular-interview1",
+  "name": "perx-angular-interview",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -12,14 +12,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.14",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-material": "^1.1.20",
+    "flat": "^5.0.0",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
+    "sass": "^1.23.7",
+    "shakespeare-data": "^3.0.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
